fixed routing, removed search.

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'My Home' | translate }}
         </a>
-        <a [routerLink]="['/manage']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a [routerLink]="['/manageDevices']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-bar-chart-o"></i>&nbsp;{{ 'Manage Devices' | translate }}
         </a>
         
